docs: simplify verbose JavaDoc documentation
Reduce class-level documentation verbosity by ~70%:
- Focus on 'what' rather than detailed 'how' explanations
- Remove verbose @param/@return/@throws from methods
- Maintain essential information for API understanding